# pi-task-watch

./: .gitignore  BACKGROUND_SERVICE_IMPLEMENTATION.md  BACKGROUND_SERVICE_QUICK_GUIDE.md  CHANGELOG_BACKGROUND_SERVICE.md  DOWNLOAD.md  FUNCTIONAL_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  analysis_options.yaml  commands.md  example_usage.dart  generate_fastforge_configs.py  icons_launcher.yaml  index.html  pubspec.yaml
.github/workflows/: build-all-platforms.yml  build-windows.yml  release.yml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: exports.dart  main.dart  my_app.dart
lib/constants/: app_constants.dart  constants.dart  tracker_constants.dart
lib/controllers/: auth_controller.dart  controllers.dart  project_controller.dart  task_controller.dart  timesheet_controller.dart  tracker_controller.dart
lib/managers/: api_manager.dart  loading_manager.dart  managers.dart  odoo_rpc_api_manager.dart  route_manager.dart  toast_manager.dart
lib/models/: dialog_result_models.dart  idle_time_data.dart  models.dart  (+7 more)
linux/: CMakeLists.txt
old_linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: active_window_listener.rs  clipboard_listener.rs  desktop_notification.rs  get_all_process_list.rs  keyboard_listener.rs  mod.rs  mouse_listener.rs  take_full_screenshot.rs
rust_builder/: pubspec.yaml
scripts/: fix_rust_warnings.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+77 files in other folders)
