[package]
name = "rust_lib_pi_task_watch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"            # Error handling
base64 = "0.21"           # For base64 encoding
screenshots = "0.8"       # For capturing screenshots
image = "0.24"            # For image processing and writing to formats
flutter_rust_bridge = "=2.11.1"  # For Flutter-Rust interop
notify-rust = "=4.5"   # Version without mac-notification-sys build errors
sysinfo = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#rdev = "0.5.0"  # <-- Add this line
device_query = "0.2"
x-win = "4.0.0"
#serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# [patch.crates-io]
# mac-notification-sys = { version = "0.6.1" }
